--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,14 @@ volumes:
 services:
   uwsgi:
     build: "."
+    environment:
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - POSTGRES_DB
     volumes:
       - "uwsgi-socket:/var/www/uwsgi"
       - "./uwsgi:/uwsgi"
+    command: ["${UWSGI_FILE}"]
 
   nginx:
     image: nginx:1.18.0
