--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@
 POSTGRES_USER=uwsgi
 POSTGRES_PASSWORD=RANDOM_PASSWORD
 POSTGRES_DB=uwsgi_data
+POSTGRES_PORT=80
+POSTGRES_HOST=postgres
 
 # uWSGI Configuration
 UWSGI_FILE=/uwsgi/university.py
